# altera-max7000-db

./: .git.hooks.pre-commit  .gitignore  .venv.pre-commit  Makefile  README.md  build.sh  common.css  common.py  dependencies.txt  doc.mk  epm7032s.html  epm7032s.py  fasm.md  intro.html  kaitai.mk  lib.mk  package.mk  partitions.py  pyproject.toml  requirements.txt  test.mk  venv.mk
architecture/: epm7032s.py  grid.py  tiles.py
bitstream/: .gitignore  altera_epm7032s_bitstream.ksy  build.sh  style.css
devices/: epm7032s.yml  epm7128s.yml  max7000s.yml
doc/: README.md
doc/bitstream/: .gitignore  build.sh  intro.html
doc/block_diagram/: .gitignore  style.css  tiles.py
include/: epm7032s.h  macrocell.h
kaitai/bitstream/: .gitignore  max7000s.ksy
kaitai/devices/: epm7032s.ksy
simulation/: README.md
simulation/model/: defaults.vh  lab.v  macrocell.v  pia_to_lab_router.v
simulation/tests/bitstream/: Makefile  test.bit  testbench.v
simulation/tests/product_terms/: Makefile
src/bitstream/: epm7032s.ksy
verilog/bitstream/: macrocell.v  product_term.v
verilog/devices/: epm7032s.vh  max7000.v  max7000.vh  max7000_family.vh  max7000s.v  max7000s.vh
verilog/devices/blocks/: io_control_blocks.v  labs.v  macrocells.v  product_terms.v
verilog/model/: epm7032s.v  epm7032s.vh  pia.v  product_term.v  wires.v
verilog/primitives/: iob_7k.v  iob_7ks.v  lab.v  lab_router.v  macrocell.v  pia.v  primitives.vh  product_term.v
verilog/test/product_terms/: testbench.v
